--- a/index.html
+++ b/index.html
@@ -283,7 +283,9 @@
 			</blockquote>
 			<p>We are going to explore the most central nodes according to a few different centrality definitions.</p>
 			<p><strong>Betweenness and closeness centrality</strong></p>
-			<p><em>Betweenness centrality quantifies the number of times a node acts as a bridge along the shortest path between two other nodes. Closeness centrality measures the mean distance from a node to other nodes.</em></p>
+			<blockquote>
+				<p>Betweenness centrality quantifies the number of times a node acts as a bridge along the shortest path between two other nodes. Closeness centrality measures the mean distance from a node to other nodes.</p>
+			</blockquote>
 			<ul><li>If you want to get friends with the most actors on Earth, first become friends with the cast of <strong>Iron Man Three (2013)</strong>, <strong>Transformers: Dark of the Moon (2011)</strong>, or <strong>Captain America: Civil War (2016)</strong> as they are the most central hubs in the co-stardom network of science fiction movies.</li></ul>
 			<p>
 				<img alt="Iron Man Three (2013)" src="images/ironman3.jpg">
@@ -291,11 +293,15 @@
 				<img alt="Captain America: Civil War (2016)" src="images/captainamerica.jpg">
 			</p>
 			<p><strong>Degree centrality</strong></p>
-			<p><em>Degree centrality is the most basic method of defining centrality, basing the centrality only on the number of neighbours a node has.</em></p>
+			<blockquote>
+				<p>Degree centrality is the most basic method of defining centrality, basing the centrality only on the number of neighbours a node has.</p>
+			</blockquote>
 			<ul><li>Actors who played in <strong>Kaze no tani no Naushika (1984)</strong> played also in <span class="Number">343</span> different movies, which is a record.</li></ul>
 			<p><img alt="Kaze no tani no Naushika (1984)" src="images/kaze.jpg"></p>
 			<p><strong>Eigenvector centrality</strong></p>
-			<p><em> The eigenvector centrality thesis reads: A node is important if it is linked to by other important nodes.</em></p>
+			<blockquote>
+				<p>The eigenvector centrality thesis reads: A node is important if it is linked to by other important nodes.</p>
+			</blockquote>
 			<ul><li>Actors who played in <strong>Kidô senshi Gandamu (1981)</strong> played also in very connected movies like <strong>Kaze no tani no Naushika (1984)</strong></li></ul>
 			<p><img alt="Kidô senshi Gandamu (1981)" src="images/gundam.jpg"></p>
 			
